@@ -1,4 +1,3 @@
-// AbstractVariableLight.java
 package jmri.implementation;
 
 import java.util.Date;
@@ -18,14 +17,14 @@ import org.slf4j.LoggerFactory;
  * The structure is in part dictated by the limitations of the X10 protocol and
  * implementations. However, it is not limited to X10 devices only. Other
  * interfaces that have a way to provide a dimmable light should use it.
- *
+ * <p>
  * X10 has on/off commands, and separate commands for setting a variable
  * intensity via "dim" commands. Some X10 implementations use relative dimming,
  * some use absolute dimming. Some people set the dim level of their Lights and
  * then just use on/off to turn control the lamps; in that case we don't want to
  * send dim commands. Further, X10 communications is very slow, and sending a
- * complete set of dim operations can take a long time. So the algorithm is:
- * <ol>
+ * complete set of dim operations can take a long time. So the algorithm is: </p>
+ * <ul>
  * <li>Until the intensity has been explicitly set different from 1.0 or 0.0, no
  * intensity commands are to be sent over the power line.
  * </ul>
@@ -36,7 +35,6 @@ import org.slf4j.LoggerFactory;
  * @author	Dave Duchamp Copyright (C) 2004
  * @author	Ken Cameron Copyright (C) 2008,2009
  * @author	Bob Jacobsen Copyright (C) 2008,2009
- * @version $Revision$
  */
 public abstract class AbstractVariableLight extends AbstractLight
         implements java.io.Serializable {
@@ -313,7 +311,7 @@ public abstract class AbstractVariableLight extends AbstractLight
             }
         }
         if (origCurrent != mCurrentIntensity) {
-            firePropertyChange("CurrentIntensity", new Double(origCurrent), new Double(mCurrentIntensity));
+            firePropertyChange("CurrentIntensity", Double.valueOf(origCurrent), Double.valueOf(mCurrentIntensity));
             if (log.isDebugEnabled()) {
                 log.debug("firePropertyChange intensity " + origCurrent + " -> " + mCurrentIntensity);
             }
@@ -340,7 +338,7 @@ public abstract class AbstractVariableLight extends AbstractLight
         double oldValue = mCurrentIntensity;
         mCurrentIntensity = intensity;
         if (oldValue != intensity) {
-            firePropertyChange("TargetIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("TargetIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
@@ -408,5 +406,3 @@ public abstract class AbstractVariableLight extends AbstractLight
     }
 
 }
-
-/* @(#)AbstractVariableLight.java */
