@@ -21,7 +21,6 @@ import org.slf4j.LoggerFactory;
  * Hold configuration data for Warrants, includes Speed Map
  * 
  * @author Pete Cressman Copyright (C) 2015
- * @version $Revision: 28030 $
  */
 public class WarrantPreferences  {
 
@@ -185,7 +184,7 @@ public class WarrantPreferences  {
             String name = list.get(i).getName();
             Float speed = Float.valueOf(0f);
             try {
-                speed = new Float(list.get(i).getText());
+                speed = Float.valueOf(list.get(i).getText());
             } catch (NumberFormatException nfe) {
                 log.error(SpeedNamePrefs+" has invalid content for "+name+" = "+list.get(i).getText());
             }
